# iot-benchmarks

./: Cargo.toml  config.toml  flake.nix  run_broker.sh  shell.nix
data/: dds.json  mqtt.json  ros2.json
dds/: Cargo.toml
dds/src/: main.rs
mqtt/: Cargo.toml  Dockerfile  mosquitto.conf
mqtt/src/: main.rs
opcua/: Cargo.toml
src/: benchmarker.rs  config.rs
src/dds/: bench_client.rs  echo_client.rs
src/mqtt/: bench_client.rs  echo_client.rs
src/opcua/: bench_client.rs  echo_server.rs
src/ros2/: bench_client.rs  echo_client.rs
src/tcp/: bench_client.rs  echo_client.rs
src/websockets/: bench_client.rs  echo_client.rs
