[package]
name = "iot-benchmarks"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dds-echo"
path = "src/dds/echo_client.rs"

[[bin]]
name = "dds-bench"
path = "src/dds/bench_client.rs"

[[bin]]
name = "mqtt-echo"
path = "src/mqtt/echo_client.rs"

[[bin]]
name = "mqtt-bench"
path = "src/mqtt/bench_client.rs"

[[bin]]
name = "ros2-echo"
path = "src/ros2/echo_client.rs"

[[bin]]
name = "ros2-bench"
path = "src/ros2/bench_client.rs"

[[bin]]
name = "websocket-echo"
path = "src/websockets/echo_client.rs"

[[bin]]
name = "websocket-bench"
path = "src/websockets/bench_client.rs"

[dependencies]
anyhow = "1.0.75"
mio = "0.8.8"
rustdds = "0.8.5"
paho-mqtt = "0.12.2"
ctrlc = "3.4.1"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
r2r = "0.7.0"
futures = "0.3.28"
tungstenite = "0.20.1"
#chrono = "0.4"
#log = "0.4"

#[dependencies.opcua]
#path = "../../lib"
#version = "0.12.0" # OPCUARustVersion
#features = ["server", "client", "console-logging"]
