[package]
name = "opcua"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
log = "0.4"

[dependencies.opcua]
path = "../../lib"
version = "0.12.0" # OPCUARustVersion
features = ["server", "client", "console-logging"]
